# Solutions

./: README.md  pyproject.toml
SDF/: Doc_Link  SDF.py  SDF_CM.py  SDF_Hysteresis.py  SDF_TSA.py  SDF_Trend.py  SDF_Window.py
solutions/: FFT_Yolo.py  Mediapipe_Yolo.py  __main__.py
solutions/SDF/: SDF.py  SDF_CM.py  SDF_Hysteresis.py  SDF_TSA.py  SDF_Trend.py  SDF_Window.py
